im still fucking doing it (MAKING MASSIVE COMMITS)
might not even compile but im getting a new pc so i gotta get the local code changes on gh